--- a/cso-core/Cargo.toml
+++ b/cso-core/Cargo.toml
@@ -12,3 +12,6 @@ publish = false
 
 [dependencies]
 dyn-clonable = "0.9.0"
+typetag = "0.2.12"
+serde = { version = "1.0.179", features = ["derive"]}
+serde_json_any_key = "2.0.0"
