--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,8 @@ publish = false
 
 [dependencies]
 cso-core = { path = "./cso-core" }
-bit-set = "0.5.3"
-dyn-clonable = "0.9.0"
-
 serde = { version = "1.0.179", features = ["derive"]}
-serde_json = "1.0.104"
 typetag = "0.2.12"
-serde_json_any_key = "2.0.0"
+
+[dev-dependencies]
+serde_json = "1.0.104"
