--- a/cso-core/Cargo.toml
+++ b/cso-core/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/nothing-new-labs/cso-demo.git"
 publish = false
 
 [dependencies]
+bit-set = "0.5.3"
 dyn-clonable = "0.9.0"
 typetag = "0.2.12"
 serde = { version = "1.0.179", features = ["derive"]}
