--- a/cso-core/Cargo.toml
+++ b/cso-core/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "cso-demo"
+name = "cso-core"
 version = "0.1.0"
 edition = "2021"
 authors = ["Nothing New Labs <davidli2010@foxmail.com>"]
-description = "A cascade style optimizer"
+description = "The core framework of cascade style optimizer"
 readme = "README.md"
 license = "Apache-2.0"
 keywords = ["SQL", "optimizer", "CBO", "cascade"]
@@ -11,9 +11,7 @@ repository = "https://github.com/nothing-new-labs/cso-demo.git"
 publish = false
 
 [dependencies]
-cso-core = { path = "./cso-core" }
-serde = { version = "1.0.179", features = ["derive"]}
+bit-set = "0.5.3"
+dyn-clonable = "0.9.0"
 typetag = "0.2.12"
-
-[dev-dependencies]
-serde_json = "1.0.104"
+serde = { version = "1.0.179", features = ["derive"]}
